# pcs

./: README.md
heat-1.13/: ChangeLog  Makefile  Makefile.am  Makefile.in  areas_100x150.pgm  config.status  configure  configure.ac  gradient_100x150.pgm  pat1_100x150.pgm  pat2_100x150.pgm  pat3_100x150.pgm  plasma_100x150.pgm  uni_100x150.pgm
heat-1.13/omp/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  fibo1  fibo2  fibo3  heat
heat-1.13/omp/.deps/: compute.Po  fail.Po  main.Po  output.Po
heat-1.13/seq/: Makefile  Makefile.in  compute.c  config.h  config.h.in  config.status  configure  heat_pics  imgdemo  inputdemo  outputdemo
heat-1.13/seq/.deps/: compute.Po  heat_pics-compute.Po  heat_pics-main.Po  img.Po  input.Po  main_imgdemo.Po  main_inputdemo.Po  main_outputdemo.Po
heat-1.13/src/: compute.c  input.c
heat-10068767-10162429/: Makefile  Makefile.in  README  areas_100x150.pgm  config.status  config.status.lineno  configure
heat-10068767-10162429/omp/: Makefile  compute.c  config.h  config.status  configure.ac  fibo1  fibo1.c  fibo2  heat
heat-10068767-10162429/omp/.deps/: compute.Po  fibo1.Po  fibo2.Po  fibo3.Po  main.Po
heat-10068767-10162429/seq/: Makefile  compute.c  config.h  config.status  configure.ac  heat  heat_pics  imgdemo  inputdemo  outputdemo
heat-10068767-10162429/seq/.deps/: compute.Po  heat_pics-compute.Po  main_outputdemo.Po
heat-10068767-10162429/src/: input.h
